--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MemoryGame</string>
+    <string name="high_score">High Score</string>
+    <string name="play">Play</string>
+    <string name="failed">Failed</string>
+    <string name="go">Go!</string>
+    <string name="watch">Watch</string>
+    <string name="game_over">GAME OVER</string>
+    <string name="your_score">Your Score</string>
+
 </resources>
